[package]
name = "advant2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "./src/lib.rs"

[dependencies]
# tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
# chrono = "*"
regex = "*"
lazy_static = "*"

[build-dependencies]
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
chrono = "*"
hyper-tls = "*"
hyper = { version = "*", features = ["client", "http1", "http2"] }
flate2 = "1.0"
