[package]
name = "advent2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "./src/lib.rs"

[dependencies]
regex = "*"
lazy_static = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
chrono = "*"
hyper-tls = "*"
hyper = { version = "*", features = ["client", "http1", "http2"] }
flate2 = "1.0"
petgraph = "0.6.0"
